Fix blog post layout issue caused by overflowing text

--- a/_sass/blog/posts.scss
+++ b/_sass/blog/posts.scss
@@ -136,6 +136,7 @@
 
 #post {
     grid-column: 1 / 4;
+    overflow-wrap: break-word;
     @include centered;
 
     & > * {
